Fix a few nits noticed by Professor Loui:  - 2 bytes per character, not 2 bytes per row (text screen size equation)  - mul, not imul (unsigned numbers in Mode 13h offset calcuation)

--- a/labmanual/graphics/text-memory-size.tex
+++ b/labmanual/graphics/text-memory-size.tex
@@ -1,4 +1,4 @@
 \begin{displaymath}
-80 \:\mbox{columns} * 25 \:\mbox{rows} * 2 \:\mbox{bytes per row} = 4000 \:\mbox{bytes}
+80 \:\mbox{columns} * 25 \:\mbox{rows} * 2 \:\mbox{bytes per character} = 4000 \:\mbox{bytes}
 \end{displaymath}
 
